Create Basic GLFW Hello World

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,13 @@ project(LimboKeys
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(OpenGL REQUIRED)
+include_directories( ${OPENGL_INCLUDE_DIRS} )
+
+add_subdirectory(lib/glfw)
+
 add_executable(LimboKeys
 	src/main.cpp
 )
+
+target_link_libraries(LimboKeys ${OPENGL_LIBRARIES} glfw)
