--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
 
 add_subdirectory(lib/glfw)
+include_directories(lib/glfw/include)
+
+add_subdirectory(lib/glm)
+include_directories(lib/glm)
 
 set(GLEW_INCLUDE_DIRS lib/glew/include)
 set(GLEW_LIBRARIES lib/glew/lib)
@@ -19,6 +23,7 @@ set(GLEW_LIBRARIES lib/glew/lib)
 include_directories(${GLEW_INCLUDE_DIRS})
 link_directories(${GLEW_LIBRARIES})
 
+include_directories(include)
 include_directories(include)
 
 add_executable(LimboKeys
