--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/glfw"]
-	path = lib/glfw
+	path = extern/glfw
 	url = git@github.com:glfw/glfw.git
 [submodule "lib/glm"]
-	path = lib/glm
+	path = extern/glm
 	url = git@github.com:g-truc/glm.git
