Setup basic ImGui support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,17 @@ project(LimboKeys
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} cmake/)
+
+message("CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
+
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
 
-add_subdirectory(extern/glfw)
-include_directories(extern/glfw/include)
+find_package(ImGui REQUIRED)
+
+# add_subdirectory(extern/glfw)
+# include_directories(extern/glfw/include)
 
 add_subdirectory(extern/glm)
 include_directories(extern/glm)
@@ -26,7 +32,6 @@ include_directories(${GLEW_INCLUDE_DIRS})
 link_directories(${GLEW_LIBRARIES})
 
 include_directories(include)
-include_directories(include)
 
 add_executable(LimboKeys
 	src/key.cpp
@@ -34,4 +39,4 @@ add_executable(LimboKeys
 	src/shader.cpp
 )
 
-target_link_libraries(LimboKeys Release/x64/glew32s ${OPENGL_LIBRARIES}  glfw)
+target_link_libraries(LimboKeys Release/x64/glew32s ${OPENGL_LIBRARIES} ${IMGUI_LIBRARIES})
