--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "lib/glfw"]
+[submodule "extern/glfw"]
 	path = extern/glfw
 	url = git@github.com:glfw/glfw.git
-[submodule "lib/glm"]
+[submodule "extern/glm"]
 	path = extern/glm
 	url = git@github.com:g-truc/glm.git
 [submodule "extern/stb"]
