--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "extern/imgui"]
 	path = extern/imgui
 	url = git@github.com:ocornut/imgui.git
+[submodule "extern/tracy"]
+	path = extern/tracy
+	url = git@github.com:wolfpld/tracy.git
